--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -7,32 +7,37 @@
           <a [routerLink]="['/login']">Have an account?</a>
         </p>
         beckend errors are here
-        <fieldset>
-          <fieldset class="form-group">
-            <input
-              type="text"
-              placeholder="Username"
-              class="form-control form-control-lg"
-            />
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <fieldset>
+            <fieldset class="form-group">
+              <input
+                type="text"
+                placeholder="Username"
+                class="form-control form-control-lg"
+                formControlName="username"
+              />
+            </fieldset>
+            <fieldset class="form-group">
+              <input
+                type="text"
+                placeholder="Email"
+                class="form-control form-control-lg"
+                formControlName="email"
+              />
+            </fieldset>
+            <fieldset class="form-group">
+              <input
+                type="password"
+                placeholder="Password"
+                class="form-control form-control-lg"
+                formControlName="password"
+              />
+            </fieldset>
+            <button type="submit" class="btn btn-lg btn-primary pull-xs-right">
+              Sign Up
+            </button>
           </fieldset>
-          <fieldset class="form-group">
-            <input
-              type="text"
-              placeholder="Email "
-              class="form-control form-control-lg"
-            />
-          </fieldset>
-          <fieldset class="form-group">
-            <input
-              type="password"
-              placeholder="Password"
-              class="form-control form-control-lg"
-            />
-          </fieldset>
-          <button type="submit" class="btn btn-lg btn-primary pull-xs-right">
-            Sign Up
-          </button>
-        </fieldset>
+        </form>
       </div>
     </div>
   </div>
